# bafojo

./: .env  .gitignore  Cargo.toml  Config.toml.sample  README.md  package.json
api/: Cargo.toml
api/src/: lib.rs  route.rs
api/src/auth/: auth.rs  mod.rs
api/src/common/: error.rs  mod.rs  res.rs
api/src/system/: mod.rs  resource.rs  role.rs  user.rs
common/: Cargo.toml
common/src/: config.rs  constants.rs  error.rs  lib.rs  res.rs
common/src/cache/: mod.rs  redis.rs  user_info.rs
common/src/dto/: auth.rs  mod.rs  system.rs
common/src/entity/: sys_resource.rs  sys_role.rs  sys_user.rs
common/src/enums/: common.rs  mod.rs  system.rs
common/src/utils/: jwt.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/auth/: mod.rs
core/src/system/: mod.rs  post.rs  resource.rs  role.rs  role_resource.rs  user.rs  user_role.rs
core/src/util/: crypto.rs  mod.rs  mutation.rs
db/: Cargo.toml
db/src/: lib.rs
db/src/entity/: mod.rs  sys_rel_role_resource.rs  sys_rel_user_role.rs  sys_resource.rs  sys_role.rs  sys_user.rs
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  sys_rel_role_resource.rs  sys_role.rs  sys_user.rs
middleware/: Cargo.toml
middleware/src/: auth.rs  id_cache.rs  lib.rs  status_json.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230426_022644_create_table.rs  m20230904_023028_init_data.rs
migration/src/utils/: mod.rs
src/: main.rs
src/controllers/: hello.rs
tool/: input.rs  output.txt  readline.js
