[workspace]
members = [".","api", "core", "common", "migration","middleware"]

[package]
name = "bafojo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bfj-api = { path = "api" } # depends on your needs
dotenvy = "0.15.0"

[workspace.dependencies]
anyhow = "1.0"
thiserror ="1.0"
axum = "0.6.12"
axum-extra = "0"
chrono = "0"
hyper = { version = "0.14.25", features = ["full"] }
sea-orm = { version = "0.11.3", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
tower = "0.4.13"
rust-crypto = "0"
rand = "0.8"