[workspace]
members = [".", "api", "core", "common", "migration", "middleware"]

[package]
edition = "2021"
name = "bafojo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bfj-api = {path = "api"}# depends on your needs
dotenvy = "0.15.0"

[workspace.dependencies]
# 错误处理
anyhow = "1.0"
thiserror = "1.0"

axum = "0.6.20"
axum-extra = "0"
chrono = "0"
hyper = {version = "0.14.25", features = ["full"]}
jsonwebtoken = "8"
once_cell = "1.17.2"
rand = "0.8"
rust-crypto = "0"
sea-orm = {version = "0.11.3", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1.27.0", features = ["full"]}
toml = "0.7.3"
tower = "0.4.13"
tower-http = "0.4.3"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
redis="0.23.2"