[package]
name = "bfj-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }