[package]
edition = "2021"
name = "bfj-common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
axum = {workspace = true}
chrono = {workspace = true}
jsonwebtoken = {workspace = true}
mobc = {workspace = true}
mobc-redis = {workspace = true}
once_cell = {workspace = true}
sea-orm = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
toml = {workspace = true}
