[package]
edition = "2021"
name = "bfj-common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
axum = {workspace = true}
chrono = {workspace = true}
jsonwebtoken = {workspace = true}
once_cell = {workspace = true}
r2d2 = {workspace = true}
r2d2_redis = {workspace = true}
sea-orm = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true}
toml = {workspace = true}
redis={workspace=true}
