[package]
name = "bfj-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bfj-common = { path = "../common" }
chrono = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
rust-crypto = { workspace = true }
rand = { workspace = true }