[package]
name = "bfj-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
sea-orm = { version = "0.11.3", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }