[package]
edition = "2021"
name = "bfj-middleware"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
axum = {workspace = true}
bfj-common = {path = '../common'}
bfj-core = {path = '../core'}
chrono = {workspace = true}
hyper = {workspace = true}
sea-orm = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
