[package]
edition = "2021"
name = "migration"
publish = false
version = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = {version = "1", features = ["attributes", "tokio1"]}
bfj-common = {path = "../common"}
bfj-core = {path = "../core"}
futures = "0.3"

[dependencies.sea-orm-migration]
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "runtime-tokio-native-tls",
  "sqlx-mysql",
]
version = "0.11.3"
